// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle perspective change correctly 1`] = `
Array [
  Array [
    Object {
      "view": "overall",
    },
  ],
  Array [
    Object {
      "view": "leak",
    },
  ],
  Array [
    Object {
      "view": "visualizations",
      "visualization": "coverage",
    },
  ],
]
`;

exports[`should render correctly 1`] = `
<div>
  <label>
    projects.perspective
    :
  </label>
  <Select
    className="little-spacer-left input-medium"
    clearable={false}
    onChange={[Function]}
    optionComponent={[Function]}
    options={
      Array [
        Object {
          "label": "projects.view.overall",
          "type": "view",
          "value": "overall",
        },
        Object {
          "label": "projects.view.leak",
          "type": "view",
          "value": "leak",
        },
        Object {
          "label": "projects.visualization.risk",
          "type": "visualization",
          "value": "risk",
        },
        Object {
          "label": "projects.visualization.reliability",
          "type": "visualization",
          "value": "reliability",
        },
        Object {
          "label": "projects.visualization.security",
          "type": "visualization",
          "value": "security",
        },
        Object {
          "label": "projects.visualization.maintainability",
          "type": "visualization",
          "value": "maintainability",
        },
        Object {
          "label": "projects.visualization.coverage",
          "type": "visualization",
          "value": "coverage",
        },
        Object {
          "label": "projects.visualization.duplications",
          "type": "visualization",
          "value": "duplications",
        },
      ]
    }
    searchable={false}
    value="overall"
  />
</div>
`;

exports[`should render with coverage selected 1`] = `
<div>
  <label>
    projects.perspective
    :
  </label>
  <Select
    className="little-spacer-left input-medium"
    clearable={false}
    onChange={[Function]}
    optionComponent={[Function]}
    options={
      Array [
        Object {
          "label": "projects.view.overall",
          "type": "view",
          "value": "overall",
        },
        Object {
          "label": "projects.view.leak",
          "type": "view",
          "value": "leak",
        },
        Object {
          "label": "projects.visualization.risk",
          "type": "visualization",
          "value": "risk",
        },
        Object {
          "label": "projects.visualization.reliability",
          "type": "visualization",
          "value": "reliability",
        },
        Object {
          "label": "projects.visualization.security",
          "type": "visualization",
          "value": "security",
        },
        Object {
          "label": "projects.visualization.maintainability",
          "type": "visualization",
          "value": "maintainability",
        },
        Object {
          "label": "projects.visualization.coverage",
          "type": "visualization",
          "value": "coverage",
        },
        Object {
          "label": "projects.visualization.duplications",
          "type": "visualization",
          "value": "duplications",
        },
      ]
    }
    searchable={false}
    value="coverage"
  />
</div>
`;
